--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,10 @@ dependencies {
     implementation 'com.loopj.android:android-async-http:1.4.9'
     implementation 'com.google.code.gson:gson:2.8.5'
 
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+
+
+
+
 
 }
